cabal-version:      2.4
name:               blogen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             eleanor.holland
maintainer:         eleanor.fractal@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
    exposed-modules:
      Blogen
        Blogen.Convert
        Blogen.Html
          Blogen.Html.Internal
        Blogen.Markup


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, directory
    hs-source-dirs:   src
    default-language: Haskell2010

executable blogen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        directory ^>=1.3.6.0,
        blogen

    hs-source-dirs:   app
    default-language: Haskell2010
