cabal-version:      2.4
name:               blogen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             eleanor.holland
maintainer:         eleanor.fractal@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-settings
    default-language: Haskell2010
    ghc-options:
        -Wall

library
    import: common-settings
    exposed-modules:
        Blogen
            Blogen.Convert
            Blogen.Html
                Blogen.Html.Internal
            Blogen.Markup

    build-depends:    base ^>=4.14.3.0, directory
    hs-source-dirs:   src

executable blogen
    import:     common-settings
    main-is:    Main.hs

    build-depends:
        base ^>=4.14.3.0,
        blogen

    hs-source-dirs:   app
