cabal-version:      2.4
name:               blogen
version:            0.1.3.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             eleanor.holland
maintainer:         eleanor.fractal@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-settings
    default-language: Haskell2010
    default-extensions:
        StrictData
    ghc-options:
        -Wall
        -Wno-unrecognised-pragmas

library
    import: common-settings
    exposed-modules:
        Blogen
            Blogen.Convert
            Blogen.Directory
            Blogen.Html
                Blogen.Html.Internal
            Blogen.Markup

    build-depends:
        base ^>=4.14.3.0
      , directory
      , filepath
    hs-source-dirs:   src

executable blogen
    import:     common-settings
    main-is:    Main.hs
    other-modules:
        OptParse
    build-depends:
        base ^>=4.14.3.0
      , optparse-applicative
      , directory
      , blogen

    hs-source-dirs:   app

test-suite blogen-test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  other-modules:
      MarkupParsingSpec
      SpecHook
  build-depends:
      base
    , hspec
    , hspec-discover
    , raw-strings-qq
    , blogen
  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover
